--- a/sass/_partials/_intro.scss
+++ b/sass/_partials/_intro.scss
@@ -8,12 +8,12 @@
   text-align: center;
 
   h1 {
-    font-size: 3em;
-    font-weight: normal;
+    font-size: 3rem;
+    font-weight: bold;
     margin-bottom: 0;
   }
   h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: normal;
     margin-top: 0;
   }
